# bevy_debug_lines

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  demo.webm  demo_2.webm
examples/: 2d.rs  3d.rs  bench.rs  demo.rs  depth_test.rs  movement.rs  shapes_2d.rs  shapes_3d.rs  shapes_bench.rs  sprite.rs  toggle_rendering.rs  user_lines.rs
src/: debuglines.wgsl  debuglines2d.wgsl  dim2.rs  dim3.rs  lib.rs  line.frag  line.vert  render_dim.rs  shape.rs
src/shapes/: circle.rs  cuboid.rs  line.rs  mod.rs  rect.rs  sphere.rs
