[package]
name = "bevy_prototype_debug_lines"
version = "0.4.0"
authors = [ "Michael Palmos <toqoz@hotmail.com>" ]
categories = [ "game-engines", "rendering", "game-development" ]
description = "A prototype plugin providing a simple line drawing API for bevy."
edition = "2021"
homepage = "https://github.com/Toqozz/bevy_debug_lines"
keywords = [ "debug", "line", "graphics", "bevy", "drawing" ]
license = "MIT"
repository = "https://github.com/Toqozz/bevy_debug_lines"

exclude = [ "demo.gif", "demo_2.png", "demo_2.webm" ]

[dependencies]
bevy = { version = "0.6", default-features = false, features = [ "render" ] }

[features]
example_deps = [ "bevy/bevy_winit", "bevy/bevy_gltf", "bevy/x11" ]

[[example]]
name = "3d"
required-features = [ "example_deps" ]

[[example]]
name = "2d"
required-features = [ "example_deps" ]

[[example]]
name = "bench"
required-features = [ "example_deps" ]

[[example]]
name = "user_lines"
required-features = [ "example_deps" ]

[[example]]
name = "depth_test"
required-features = [ "example_deps" ]

[[example]]
name = "movement"
required-features = [ "example_deps" ]
